fix(dialog): add spacing between form content and footer buttons

--- a/src/styles/things-dialog.scss
+++ b/src/styles/things-dialog.scss
@@ -118,6 +118,7 @@
   .things-dialog-footer {
     display: flex;
     justify-content: flex-end;
+    margin-top: 20px;
   }
 
   .el-dialog__title {
